Fixed styling on input buttons on mobile devices

--- a/scss/_assets/_forms.scss
+++ b/scss/_assets/_forms.scss
@@ -53,6 +53,7 @@
     text-align: center;
     border: 1px solid transparent;
     border-radius: 4px;
+    -webkit-appearance: none;
 }
 
 .button:hover {
